Dummy_Package_for_scratch_org/main/default/objects/Record_Matching_Formula__c/Record_Matching_Formula__c.object-meta.xml
<CustomObject>
    <label>Record Matching Formula</label>
    <nameField>
        <label>Record Matching Formula Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Record Matching Formulas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>