Dummy_Package_for_scratch_org/main/default/objects/Record_Matching_Formula__c/fields/Configuration_Source_Org__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Source_Org__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Credential from where Copado retrieves the list of objects and fields available to build the formula.</inlineHelpText>
    <label>Configuration Source Credential</label>
    <referenceTo>Org__c</referenceTo>
    <relationshipLabel>Record Matching Formulas</relationshipLabel>
    <relationshipName>Record_Matching_Formulas</relationshipName>
    <type>Lookup</type>
</CustomField>