Dummy_Package_for_scratch_org/main/default/objects/Record_Matching_Formula__c/fields/Field_1__c.field-meta.xml
<CustomField>
    <fullName>Field_1__c</fullName>
    <inlineHelpText>First field in the formula</inlineHelpText>
    <label>Field 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>