Dummy_Package_for_scratch_org/main/default/objects/Record_Matching_Formula__c/fields/Field_2__c.field-meta.xml
<CustomField>
    <fullName>Field_2__c</fullName>
    <inlineHelpText>Second field in the formula</inlineHelpText>
    <label>Field 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>