Dummy_Package_for_scratch_org/main/default/objects/Record_Matching_Formula__c/fields/Field_3__c.field-meta.xml
<CustomField>
    <fullName>Field_3__c</fullName>
    <inlineHelpText>Third field in the formula</inlineHelpText>
    <label>Field 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>