Dummy_Package_for_scratch_org/main/default/objects/Record_Matching_Formula__c/fields/Hash_Formula__c.field-meta.xml
<CustomField>
    <fullName>Hash_Formula__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Hashing the Formula will replace the original value with a unique, fixed-size set of random characters. It will ensure the value will not exceed the External Id field character limit but it will not be readable.</inlineHelpText>
    <label>Hash External Id Value</label>
    <type>Checkbox</type>
</CustomField>