Dummy_Package_for_scratch_org/main/default/objects/Record_Matching_Formula__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Select the object from the dropdown to configure the formula. The fields available for the formula are based on the selected object and source org.</inlineHelpText>
    <label>Object</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>