Dummy_Package_for_scratch_org/main/default/objects/Record_Matching_Formula__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Object__c</columns>
    <columns>Field_1__c</columns>
    <columns>Field_2__c</columns>
    <columns>Field_3__c</columns>
    <columns>Hash_Formula__c</columns>
    <columns>Configuration_Source_Org__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>